<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SigUpActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="E Salik"
        android:textColor="@color/color_gradient_1"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo_title"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/wellcomeText"
            android:text="@string/Welcome"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:layout_below="@id/wellcomeText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="Name"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/name_et_icon"
            android:backgroundTint="@color/colorPrimary"
            android:autofillHints="username"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:layout_below="@id/et_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/Email"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/email_et_icon"
            android:backgroundTint="@color/colorPrimary"
            android:autofillHints="emailAddress"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:layout_below="@id/et_email"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/Password"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/password_et_icon"
            android:backgroundTint="@color/colorPrimary"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:id="@+id/button_signup"
            android:layout_below="@id/et_password"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:text="@string/Sign_up"
            android:textAllCaps="true"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:elevation="@dimen/_20sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_text"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/button_signup"
            android:layout_above="@id/button_google_login"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:text="@string/continue_with"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:id="@+id/button_google_login"
            android:clickable="true"
            app:cardElevation="@dimen/_16sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_above="@id/signup_lt"
            app:cardCornerRadius="@dimen/_90sdp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gmail_logo_icon"/>
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_lt"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:text="@string/have_account"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Login"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryVariant"/>
        </LinearLayout>





    </RelativeLayout>
</RelativeLayout>