<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_16sdp"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/button_cancel_dialog"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/cancel_dialog_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/forget_text"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            android:text="@string/Add_Receipt_title"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:scrollbars="vertical"
            android:keepScreenOn="true"
            android:background="#103B3C40">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/et_sar_amount"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/Total_Bill"
                    app:expandedHintEnabled="false"
                    app:placeholderText="SAR"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_total_bill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/et_description_details"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/Description"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/store_desc"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_category"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/Category"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/Food"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:orientation="horizontal"
                    >
                    <AutoCompleteTextView
                        android:id="@+id/category_dropdown"
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_payment_method"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/Payment"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/Cash"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:orientation="horizontal"
                    >
                    <AutoCompleteTextView
                        android:id="@+id/payment_dropdown"
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_expiry_date"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/Expiry_Date"
                    app:expandedHintEnabled="false"
                    android:focusable="false"
                    app:placeholderText="DD/MM/YYYY"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expiryDateField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/receipt_here"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_pick_lt"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal">
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_gallery"
                        app:cardBackgroundColor="@color/progress_background"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/_12sdp"
                        app:cardElevation="@dimen/_4sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_margin="@dimen/_10sdp">
                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_gallery"/>

                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_camera"
                        app:cardBackgroundColor="@color/progress_background"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/_12sdp"
                        app:cardElevation="@dimen/_4sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_margin="@dimen/_10sdp">
                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_camera"/>

                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_scan"
                        app:cardBackgroundColor="@color/progress_background"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/_12sdp"
                        app:cardElevation="@dimen/_4sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_margin="@dimen/_10sdp">
                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_scan"/>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/image_picked_lt"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:id="@+id/picked_image"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:id="@+id/button_add_receipt"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:text="@string/Add_Receipt"
            android:textAllCaps="true"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:elevation="@dimen/_20sdp" />


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>